fix bug come back arrow on mobile

--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -176,6 +176,11 @@ section.section#section-retour
         position: absolute
         left: -1rem
         content: "←"
+  @media (max-width: 549px)
+    h3 a
+      margin-left: 2rem
+      &:before
+        left: 1rem
 
 section.section#section-formulaire
   .section__title
